Add: 회원가입, 로그인, 로그아웃 기능

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -137,25 +137,48 @@
 							<p class="subtitle">Catch Shop</p>
 							<h1>Login</h1>
 							<!-- 로그인 폼 시작 -->
-							<form action="/members/new" method="post">
-								<div class="form-group" style="width:300px;margin:0 auto;">
-									<input type="text" style="border-radius:3px;border:none;margin-bottom:10px;width:100%;height:35px;" placeholder="아이디를 입력하세요"><br>
-									<input type="password" style="border-radius:3px;border:none;margin-bottom:10px;width:100%;height:35px;" placeholder="비밀번호를 입력하세요">
+							<form action="/login" th:action th:object="${loginForm}" method="post">
+								<div th:if="${#fields.hasGlobalErrors()}">
+									<p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">전체 오류 메시지</p>
+								</div>
+
+								<div style="width:300px;margin:0 auto;">
+									<label for="loginId">아이디</label>
+									<input type="text" id="loginId" th:field="*{loginId}" class="form-control"
+										   style="border-radius:3px;border:none;margin-bottom:10px;width:100%;height:35px;"
+										   placeholder="아이디를 입력하세요"
+										   th:errorclass="field-error">
+									<div class="field-error" th:errors="*{loginId}" />
+								</div>
+								<div style="width:300px;margin:0 auto;">
+									<label for="password">비밀번호</label>
+									<input type="password" id="password" th:field="*{password}" class="form-control"
+										   style="border-radius:3px;border:none;margin-bottom:10px;width:100%;height:35px;"
+										   placeholder="비밀번호를 입력하세요"
+										   th:errorclass="field-error">
+									<div class="field-error" th:errors="*{password}" />
+								</div>
+
+								<!-- 로그인 버튼 -->
+								<div class="hero-btns" style="margin-top:0px;">
+									<div style="width:300px;margin:0 auto;padding-bottom:10px;">
+										<a style="border-radius: 3px;width:100%;" class="boxed-btn">
+											<button type="submit"
+													style="width:100%; border: hidden; text-align: center; background-color: transparent;"
+													class="btn btn-primary">Login</button>
+										</a>
+									</div>
 								</div>
 							</form>
 							<!-- 로그인 폼 끝-->
 							
-							<!-- 로그인, 회원가입, ID/PW 찾기 버튼 시작 -->
-							<div class="hero-btns" style="margin-top:0px;">
-                                <div style="width:300px;margin:0 auto;padding-bottom:10px;">
-                                    <a href="/" style="border-radius: 3px;width:100%;" class="boxed-btn">Login</a>
-                                </div>
+							<!-- 회원가입, ID/PW 찾기 버튼 시작 -->
+							<div>
                                 <div style="width:300px;margin:0 auto;">
                                     <a href="join" style="border-radius: 3px;width:49%;float:left;margin-left:0px;" class="bordered-btn">Join</a>
                                     <a href="findidpw" style="border-radius: 3px;width:49%;float:right;margin-left:0px;" class="bordered-btn">Find ID/PW</a>
                                 </div>
                             </div>
-							<!-- 로그인, 회원가입, ID/PW 찾기 버튼 끝 -->
 						</div>
 					</div>
 				</div>
