--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -9,7 +9,7 @@
           <div class="main-menu-wrap">
             <!-- logo -->
             <div class="site-logo">
-              <a href="index_2.html">
+              <a href="/">
                 <img src="assets/img/logo.png" alt="">
               </a>
             </div>
@@ -18,7 +18,6 @@
             <!-- menu start -->
             <nav class="main-menu">
               <ul>
-
                 <li><a href="#">goods-review</a>
                   <ul class="sub-menu">
                     <li><a href="review.html">review</a></li>
