--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -9,7 +9,7 @@
           <div class="main-menu-wrap">
             <!-- logo -->
             <div class="site-logo">
-              <a href="index_2.html">
+              <a href="index_2">
                 <img src="assets/img/logo.png" alt="">
               </a>
             </div>
@@ -35,6 +35,7 @@
                     <a class="shopping-cart" href="cart.html"><i class="far fa-heart"></i></a>
                     <a class="shopping-cart" href="cart.html"><i class="fas fa-shopping-cart"></i></a>
                     <a class="mobile-hide search-bar-icon" href="#"><i class="fas fa-search"></i></a>
+                    <a href="login">login</a>
                   </div>
                 </li>
               </ul>
