더미데이터파일(InitDb.java), DTO, BaseEntitiy(생성일,수정일),  상품 create기능 service 추가

--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -9,7 +9,7 @@
           <div class="main-menu-wrap">
             <!-- logo -->
             <div class="site-logo">
-              <a href="index_2.html">
+              <a href="/">
                 <img src="assets/img/logo.png" alt="">
               </a>
             </div>
@@ -21,7 +21,7 @@
 
                 <li><a href="#">goods-review</a>
                   <ul class="sub-menu">
-                    <li><a href="review.html">review</a></li>
+                    <li><a href="reviews">review</a></li>
                     <li><a href="">Shop</a></li>
                   </ul>
                 </li>
@@ -33,8 +33,9 @@
                 <li>
                   <div class="header-icons">
                     <a class="shopping-cart" href="cart.html"><i class="far fa-heart"></i></a>
-                    <a class="shopping-cart" href="cart.html"><i class="fas fa-shopping-cart"></i></a>
+                    <a class="shopping-cart" href="cart"><i class="fas fa-shopping-cart"></i></a>
                     <a class="mobile-hide search-bar-icon" href="#"><i class="fas fa-search"></i></a>
+                    <a href="login" id="login">Login</a>
                   </div>
                 </li>
               </ul>
