--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -40,7 +40,7 @@
 							<p class="subtitle">Catch Shop</p>
 							<h1>Login</h1>
 							<!-- 로그인 폼 시작 -->
-							<form action="/login" th:action th:object="${loginForm}" method="post">
+							<form action="/login" th:action th:object="${loginDto}" method="post">
 								<div th:if="${#fields.hasGlobalErrors()}">
 									<p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">전체 오류 메시지</p>
 								</div>
