비밀번호 찾기 기능 구현-메일서버

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -76,12 +76,11 @@
 							<!-- 로그인 폼 끝-->
 							
 							<!-- 회원가입, ID/PW 찾기 버튼 시작 -->
-							<div>
-                                <div style="width:300px;margin:0 auto;">
-                                    <a href="join" style="border-radius: 3px;width:49%;float:left;margin-left:0px;" class="bordered-btn">Join</a>
-                                    <a href="find-id-pw" style="border-radius: 3px;width:49%;float:right;margin-left:0px;" class="bordered-btn">Find ID/PW</a>
-                                </div>
-                            </div>
+							<a href="join" style="border-radius: 3px; width:300px;margin:0 auto;padding-bottom:10px;" class="bordered-btn">Join</a>
+							<div style="width:300px;margin:0 auto;">
+								<a href="find-id" style="border-radius: 3px;width:49%;float:left;margin-left:0px;" class="bordered-btn">Find ID</a>
+								<a href="find-pw" style="border-radius: 3px;width:49%;float:right;margin-left:0px;" class="bordered-btn">Find PW</a>
+							</div>
 						</div>
 					</div>
 				</div>
