--- a/src/main/resources/templates/find-id.html
+++ b/src/main/resources/templates/find-id.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/header :: header" />
-
 <body>
+
 <!--PreLoader-->
 <div class="loader">
 	<div class="loader-inner">
@@ -14,7 +14,6 @@
 <!-- header -->
 <div th:replace="fragments/bodyHeader :: bodyHeader"/>
 
-<!-- search area -->
 <div class="search-area">
 	<div class="container">
 		<div class="row">
@@ -31,91 +30,64 @@
 		</div>
 	</div>
 </div>
-<!-- end search arewa -->
 
-<!-- breadcrumb-section -->
-<div class="breadcrumb-section breadcrumb-bg">
+<div class="hero-area hero-bg">
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-8 offset-lg-2 text-center">
-				<div class="breadcrumb-text">
-					<p>Catch Shop</p>
-					<h1>Find Id & Password</h1>
+			<div class="col-lg-9 offset-lg-2 text-center">
+				<div class="hero-text">
+					<div class="hero-text-tablecell">
+						<p class="subtitle">Catch Shop</p>
+						<!-- 아이디찾기 폼 시작 -->
+						<h3 style="text-align: center">Find Id</h3><br>
+						<form action="/find-id" th:action th:object="${findIdDto}" method="post">
+
+							<h6 th:if="${userId != null}" style="text-align: center">회원님의 아이디는
+								<div th:text="${userId}" style="text-align: center">기본 메시지</div>입니다.</h6><br>
+
+							<div th:if="${#fields.hasGlobalErrors()}">
+								<p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}"
+								   style="text-align: center">전체 오류 메시지</p>
+							</div>
+
+							<!-- 이름 -->
+							<div style="width:300px;margin:0 auto;">
+								<label for="name">이름</label>
+								<input type="text" id="name" th:field="*{name}" class="form-control"
+									   style="border-radius:3px;border:none;margin-bottom:10px;width:100%;height:35px;"
+									   placeholder="이름을 입력하세요"
+									   th:errorclass="field-error">
+								<div class="field-error" th:errors="*{name}" />
+							</div>
+
+							<!-- 연락처 -->
+							<div style="width:300px;margin:0 auto;">
+								<label for="telephone">연락처</label>
+								<input type="text" id="telephone" th:field="*{telephone}" class="form-control"
+									   style="border-radius:3px;border:none;margin-bottom:10px;width:100%;height:35px;"
+									   placeholder="연락처를 입력하세요"
+									   th:errorclass="field-error">
+								<div class="field-error" th:errors="*{telephone}" />
+							</div>
+
+							<!-- 아이디 찾기 버튼 -->
+							<div class="hero-btns" style="margin-top:0px;">
+								<div style="width:300px;margin:0 auto;padding-bottom:10px;">
+									<a style="border-radius: 3px;width:100%;" class="boxed-btn">
+										<button type="submit"
+												style="width:100%; border: hidden; text-align: center; background-color: transparent;"
+												class="btn btn-primary">Find Id</button>
+									</a>
+								</div>
+							</div>
+						</form>
+						<!-- 아이디찾기 폼 끝-->
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
-<!-- end breadcrumb section -->
-
-<!-- single product -->
-<div class="single-product mt-150 mb-150">
-	<div class="container">
-		<!-- 아이디찾기 폼 시작 -->
-		<h3 style="text-align: center">Find Id</h3><br>
-		<form action="/find-id-pw" th:action th:object="${findIdDto}" method="post">
-			<h6 th:if="${loginId != null}" style="text-align: center">회원님의 아이디는
-			<div th:text="${loginId}" style="text-align: center">기본 메시지</div>입니다.</h6><br>
-			<div th:if="${#fields.hasGlobalErrors()}">
-				<p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}"
-				   style="text-align: center">전체 오류 메시지</p>
-			</div>
-
-			<!-- 이름 -->
-			<div style="width:300px;margin:0 auto;">
-				<label for="name">이름</label>
-				<input type="text" id="name" th:field="*{name}" class="form-control"
-					   style="border-radius:3px;border:none;margin-bottom:10px;width:100%;height:35px;"
-					   placeholder="이름 입력하세요"
-					   th:errorclass="field-error">
-				<div class="field-error" th:errors="*{name}" />
-			</div>
-
-			<!-- 연락처 -->
-			<div style="width:300px;margin:0 auto;">
-				<label for="telephone">연락처</label>
-				<input type="text" id="telephone" th:field="*{telephone}" class="form-control"
-					   style="border-radius:3px;border:none;margin-bottom:10px;width:100%;height:35px;"
-					   placeholder="연락처를 입력하세요"
-					   th:errorclass="field-error">
-				<div class="field-error" th:errors="*{telephone}" />
-			</div>
-
-			<!-- 아이디 찾기 버튼 -->
-			<div class="hero-btns" style="margin-top:0px;">
-				<div style="width:300px;margin:0 auto;padding-bottom:10px;">
-					<a style="border-radius: 3px;width:100%;" class="boxed-btn">
-						<button type="submit"
-								style="width:100%; border: hidden; text-align: center; background-color: transparent;"
-								class="btn btn-primary">Find Id</button>
-					</a>
-				</div>
-			</div>
-		</form>
-		<!-- 아이디찾기 폼 끝-->
-
-		<br><br><br>
-
-		<!-- 비밀번호찾기 폼 시작 -->
-		<h3 style="text-align: center">Find Password</h3><br>
-		<form action="" method="post">
-			<div class="form-group" style="width:300px;margin:0 auto;">
-				<input type="text" style="border-radius:3px;border:none;margin-bottom:10px;width:100%;height:35px;" placeholder="아이디를 입력하세요"><br>
-				<input type="password" style="border-radius:3px;border:none;margin-bottom:10px;width:100%;height:35px;" placeholder="이메일을 입력하세요">
-			</div>
-		</form>
-		<!-- 비밀번호찾기 폼 끝-->
-
-		<!-- 비밀번호찾기 버튼 시작 -->
-		<div class="hero-btns" style="margin-top:0px;">
-			<div style="width:300px;margin:0 auto;">
-				<a style="border-radius: 3px;width:100%;" class="boxed-btn">Find Password</a>
-			</div>
-		</div>
-		<!-- 비밀번호찾기 버튼 끝 -->
-	</div>
-</div>
-<!-- end single product -->
 
 <!-- footer -->
 <div class="footer-area">
@@ -141,7 +113,7 @@
 				<div class="footer-box pages">
 					<h2 class="widget-title">Pages</h2>
 					<ul>
-						<li><a href="/">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
 						<li><a href="services.html">Shop</a></li>
 						<li><a href="news.html">News</a></li>
@@ -153,7 +125,7 @@
 				<div class="footer-box subscribe">
 					<h2 class="widget-title">Subscribe</h2>
 					<p>Subscribe to our mailing list to get the latest updates.</p>
-					<form action="/">
+					<form action="index.html">
 						<input type="email" placeholder="Email">
 						<button type="submit"><i class="fas fa-paper-plane"></i></button>
 					</form>
@@ -209,5 +181,6 @@
 <script src="assets/js/sticker.js"></script>
 <!-- main js -->
 <script src="assets/js/main.js"></script>
+
 </body>
 </html>
