--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -32,7 +32,7 @@
                 <li>
                   <div class="header-icons">
                     <a class="shopping-cart" href="cart.html"><i class="far fa-heart"></i></a>
-                    <a class="shopping-cart" href="cart"><i class="fas fa-shopping-cart"></i></a>
+                    <a class="shopping-cart" href="carts"><i class="fas fa-shopping-cart"></i></a>
                     <a class="mobile-hide search-bar-icon" href="#"><i class="fas fa-search"></i></a>
                     <a href="login">login</a>
                   </div>
