--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -67,29 +67,13 @@
 								</tr>
 							</thead>
 							<tbody>
-								<tr class="table-body-row">
+								<tr th:each="cart : ${carts.cartList}">
 									<td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
 									<td class="product-image"><img src="assets/img/products/product-img-1.jpg" alt=""></td>
-									<td class="product-name">Strawberry</td>
-									<td class="product-price">$85</td>
-									<td class="product-quantity"><input type="number" placeholder="0"></td>
-									<td class="product-total">$85</td>
-								</tr>
-								<tr class="table-body-row">
-									<td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
-									<td class="product-image"><img src="assets/img/products/product-img-2.jpg" alt=""></td>
-									<td class="product-name">Berry</td>
-									<td class="product-price">$70</td>
-									<td class="product-quantity"><input type="number" placeholder="0"></td>
-									<td class="product-total">$70</td>
-								</tr>
-								<tr class="table-body-row">
-									<td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
-									<td class="product-image"><img src="assets/img/products/product-img-3.jpg" alt=""></td>
-									<td class="product-name">Lemon</td>
-									<td class="product-price">$35</td>
-									<td class="product-quantity"><input type="number" placeholder="0"></td>
-									<td class="product-total">$35</td>
+									<td class="product-name" th:text="${cart.name}"></td>
+									<td class="product-price" th:text="${cart.price} + '원'"></td>
+									<td class="product-quantity"><input type="number" th:value="${cart.cartCount}"></td>
+									<td class="product-total" th:text="${cart.totalProductPrice}"></td>
 								</tr>
 							</tbody>
 						</table>
@@ -111,15 +95,15 @@
 							<tbody>
 								<tr class="total-data">
 									<td><strong>전체 상품 금액</strong></td>
-									<td>$500</td>
+									<td th:text="${carts.totalAllProductPrice} + '원'"></td>
 								</tr>
 								<tr class="total-data">
 									<td><strong>배송비</strong></td>
-									<td>$45</td>
+									<td th:text="${carts.deliveryPrice} + '원'"></td>
 								</tr>
 								<tr class="total-data">
 									<td><strong>최종 결제 금액</strong></td>
-									<td>$545</td>
+									<td th:text="${carts.totalPayPrice} + '원'"></td>
 								</tr>
 							</tbody>
 						</table>
