--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -86,17 +86,23 @@
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<div class="pagination-wrap">
-<!--						<ul class = "pagination h-100 justify-content-center align-items-center">-->
-<!--							<li class="page-item " th:if="${result.prev}">-->
-<!--								<a class=page-link" href = "#" tabindex="-1">Preview</a>-->
-<!--							</li>-->
-<!--							<li th:class=" 'page-item ' + ${result.page == page? 'active':''} " th:each="page: ${result.pageList}">-->
-<!--								<a class=page-link" href = "#" >[[${page}]]</a>-->
-<!--							</li>-->
-<!--							<li class="page-item " th:if="${result.next}">-->
-<!--								<a class=page-link" href = "#">Next</a>-->
-<!--							</li>-->
-<!--						</ul>-->
+						<ul class="pagination h-100 justify-content-center align-items-center">
+
+							<li class="page-item " th:if="${result.prev}">
+								<a class="page-link" th:href="@{/guestbook/list(page= ${result.start -1})}" tabindex="-1">Previous</a>
+							</li>
+
+							<li th:class=" 'page-item ' + ${result.page == page?'active':''} " th:each="page: ${result.pageList}">
+								<a class="page-link" th:href="@{/guestbook/list(page = ${page})}">
+									[[${page}]]
+								</a>
+							</li>
+
+							<li class="page-item" th:if="${result.next}">
+								<a class="page-link" th:href="@{/guestbook/list(page= ${result.end + 1})}">Next</a>
+							</li>
+
+						</ul>
 					</div>
 				</div>
 			</div>
