--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -68,12 +68,22 @@
 							</thead>
 							<tbody>
 								<tr th:each="cart : ${carts.cartList}">
-									<td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
+									<td class="product-remove">
+										<form th:action="@{'/carts/' + ${cart.id}}" th:method="post">
+											<input type="hidden" name="_method" value="delete">
+											<button style="border: none; background-color: transparent"><i class="far fa-window-close"></i></button>
+										</form>
+									</td>
 									<td class="product-image"><img src="assets/img/products/product-img-1.jpg" alt=""></td>
 									<td class="product-name" th:text="${cart.name}"></td>
 									<td class="product-price" th:text="${cart.price} + '원'"></td>
-									<td class="product-quantity"><input type="number" th:value="${cart.cartCount}"></td>
-									<td class="product-total" th:text="${cart.totalProductPrice}"></td>
+									<td class="product-quantity">
+										<form th:action="@{'/carts/' + ${cart.id}}"th:method="post">
+											<input type="hidden" name="_method" value="put">
+											<input type="number" th:name="count" th:value="${cart.cartCount}">
+										</form>
+									</td>
+									<td class="product-total" th:text="${cart.totalProductPrice} + '원'"></td>
 								</tr>
 							</tbody>
 						</table>
