회원정보수정 진행중, test코드 mailService 의존성 오류 해결

--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -31,7 +31,8 @@
                 </li>
                 <li>
                   <div class="header-icons">
-                    <a class="shopping-cart" href="cart.html"><i class="far fa-heart"></i></a>
+                    <a class="shopping-cart" th:if="${session.loginUser == null}" href="login"><i class="far fa-heart"></i></a>
+                    <a class="shopping-cart" th:if="${session.loginUser != null}" href="mypage"><i class="far fa-heart"></i></a>
                     <a class="shopping-cart" href="carts"><i class="fas fa-shopping-cart"></i></a>
                     <a class="mobile-hide search-bar-icon" href="#"><i class="fas fa-search"></i></a>
                     <a th:if="${session.loginUser == null}" href="login">Login</a>
