--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -220,6 +220,8 @@
 <script src="assets/js/sticker.js"></script>
 <!-- main js -->
 <script src="assets/js/main.js"></script>
+
+<!-- 주소록 api -->
 <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
 <script src="/resources/js/addressapi.js"></script>
 <script>
