--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -25,8 +25,13 @@
 					<div class="search-bar">
 						<div class="search-bar-tablecell">
 							<h3>Search For:</h3>
-							<input type="text" placeholder="Keywords">
-							<button type="submit">Search <i class="fas fa-search"></i></button>
+							<form action="/products" method="get" id="searchForm">
+								<!--input type="hidden" name="page" value="1">
+								<input class = "form-control" name="Keywords" th:value = ${pageRequestDTO.keyword}-->
+								<button type="submit">Search <i class="fas fa-search"></i></button>
+							</form>
+
+
 						</div>
 					</div>
 				</div>
