관리자 회원가입 기능 추가

--- a/src/main/resources/templates/make-question.html
+++ b/src/main/resources/templates/make-question.html
@@ -68,14 +68,6 @@
                 </select>
             </form><br>
 
-<!--            &lt;!&ndash; 제목 &ndash;&gt;-->
-<!--            <div class="form-group">-->
-<!--                <label for="title" class="qna_label">제목</label>-->
-<!--                <input type="text" class="form-control" id="title"-->
-<!--                       placeholder="제목을 입력하세요" name="title"-->
-<!--                       maxlength="10" required="required" pattern=".{4,15}">-->
-<!--                <div id="title_cnt" style="float:right; color:orange;">0 / 10</div>-->
-<!--            </div>-->
             <!-- 내용 -->
             <div class="form-group">
                 <label for="content" class="qna_label">내용</label>
@@ -92,21 +84,6 @@
                     <br><br>
                     <img id="QnA_img_frame1" src="assets/img/test_img.png" style="float:left;">
                 </div>
-<!--                <div class="col-lg-4 col-md-6 text-center">-->
-<!--                    &lt;!&ndash; 첨부 이미지2 &ndash;&gt;-->
-<!--                    <label for="content" class="qna_label">첨부 이미지2</label><br><br>-->
-<!--                    <input type="file" id="img2_insert_btn" onchange="imgPreview(QnA_img_frame2, event.target.files[0])">-->
-<!--                    <br><br>-->
-<!--                    <img id="QnA_img_frame2" src="assets/img/test_img.png" style="float:left;">-->
-<!--                </div>-->
-<!--                <div class="col-lg-4 col-md-6 offset-lg-0 offset-md-3 text-center">-->
-<!--                    &lt;!&ndash; 첨부 이미지3 &ndash;&gt;-->
-<!--                    <label for="content" class="qna_label">첨부 이미지3</label><br><br>-->
-<!--                    <input type="file" id="img3_insert_btn" onchange="imgPreview(QnA_img_frame3, event.target.files[0])">-->
-<!--                    <br><br>-->
-<!--                    <img id="QnA_img_frame3" src="assets/img/test_img.png" style="float:left;">-->
-<!--                </div>-->
-            </div><br><br><br>
 
             <!-- Q&A 등록 버튼 시작 -->
             <div class="hero-btns" style="margin-top:0px;">
@@ -123,76 +100,7 @@
 <!-- end single product -->
 
 <!-- footer -->
-<div class="footer-area">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3 col-md-6">
-                <div class="footer-box about-widget">
-                    <h2 class="widget-title">About us</h2>
-                    <p>Ut enim ad minim veniam perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <div class="footer-box get-in-touch">
-                    <h2 class="widget-title">Get in Touch</h2>
-                    <ul>
-                        <li>34/8, East Hukupara, Gifirtok, Sadan.</li>
-                        <li>support@fruitkha.com</li>
-                        <li>+00 111 222 3333</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <div class="footer-box pages">
-                    <h2 class="widget-title">Pages</h2>
-                    <ul>
-                        <li><a href="/">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="services.html">Shop</a></li>
-                        <li><a href="news.html">News</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <div class="footer-box subscribe">
-                    <h2 class="widget-title">Subscribe</h2>
-                    <p>Subscribe to our mailing list to get the latest updates.</p>
-                    <form action="/">
-                        <input type="email" placeholder="Email">
-                        <button type="submit"><i class="fas fa-paper-plane"></i></button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- end footer -->
-
-<!-- copyright -->
-<div class="copyright">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6 col-md-12">
-                <p>Copyrights &copy; 2019 - <a href="https://imransdesign.com/">Imran Hossain</a>,  All Rights Reserved.<br>
-                    Distributed By - <a href="https://themewagon.com/">Themewagon</a>
-                </p>
-            </div>
-            <div class="col-lg-6 text-right col-md-12">
-                <div class="social-icons">
-                    <ul>
-                        <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                        <li><a href="#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-                        <li><a href="#" target="_blank"><i class="fab fa-dribbble"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- end copyright -->
+<div th:replace="fragments/footer :: footer"/>
 
 <!-- jquery -->
 <script src="assets/js/jquery-1.11.3.min.js"></script>
