--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -112,6 +112,14 @@
 				<p th:if="${#fields.hasErrors('detail')}" th:errors="*{detail}">Incorrect date</p><br>
 			</div>
 
+			<!-- 관리자/사용자 권한 설정 체크박스 -->
+			<div style="width:300px;margin:0 auto;">
+				<div th:each="role : ${roles}" class="form-check form-check-inline" >
+					<input type="radio" th:field="*{role}" th:value="${role.name()}" class="form-check-input" >
+					<label th:for="${#ids.prev('role')}" th:text="${role.description}" class="form-check-label"></label>
+				</div>
+			</div><br>
+
 			<!-- 회원가입 버튼 -->
 			<div class="hero-btns" style="margin-top:0px;">
 				<div style="width:300px;margin:0 auto;">
@@ -129,76 +137,7 @@
 <!-- end single product -->
 
 <!-- footer -->
-<div class="footer-area">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-3 col-md-6">
-				<div class="footer-box about-widget">
-					<h2 class="widget-title">About us</h2>
-					<p>Ut enim ad minim veniam perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</p>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6">
-				<div class="footer-box get-in-touch">
-					<h2 class="widget-title">Get in Touch</h2>
-					<ul>
-						<li>34/8, East Hukupara, Gifirtok, Sadan.</li>
-						<li>support@fruitkha.com</li>
-						<li>+00 111 222 3333</li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6">
-				<div class="footer-box pages">
-					<h2 class="widget-title">Pages</h2>
-					<ul>
-						<li><a href="/">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="services.html">Shop</a></li>
-						<li><a href="news.html">News</a></li>
-						<li><a href="contact.html">Contact</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6">
-				<div class="footer-box subscribe">
-					<h2 class="widget-title">Subscribe</h2>
-					<p>Subscribe to our mailing list to get the latest updates.</p>
-					<form action="/">
-						<input type="email" placeholder="Email">
-						<button type="submit"><i class="fas fa-paper-plane"></i></button>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- end footer -->
-
-<!-- copyright -->
-<div class="copyright">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-6 col-md-12">
-				<p>Copyrights &copy; 2019 - <a href="https://imransdesign.com/">Imran Hossain</a>,  All Rights Reserved.<br>
-					Distributed By - <a href="https://themewagon.com/">Themewagon</a>
-				</p>
-			</div>
-			<div class="col-lg-6 text-right col-md-12">
-				<div class="social-icons">
-					<ul>
-						<li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-						<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-						<li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-						<li><a href="#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-						<li><a href="#" target="_blank"><i class="fab fa-dribbble"></i></a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- end copyright -->
+<div th:replace="fragments/footer :: footer"/>
 
 <!-- jquery -->
 <script src="assets/js/jquery-1.11.3.min.js"></script>
@@ -224,41 +163,7 @@
 <!-- 주소록 api -->
 <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
 <script src="/resources/js/addressapi.js"></script>
-<script>
-	function execPostCode() {
-		new daum.Postcode({
-			oncomplete: function(data) {
-				// 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+<script src="assets/js/user-address.js"></script>
 
-				// 도로명 주소의 노출 규칙에 따라 주소를 조합한다.
-				// 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
-				var fullRoadAddr = data.roadAddress; // 도로명 주소 변수
-				var extraRoadAddr = ''; // 도로명 조합형 주소 변수
-
-				// 법정동명이 있을 경우 추가한다. (법정리는 제외)
-				// 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
-				if(data.bname !== '' && /[동|로|가]$/g.test(data.bname)){
-					extraRoadAddr += data.bname;
-				}
-				// 건물명이 있고, 공동주택일 경우 추가한다.
-				if(data.buildingName !== '' && data.apartment === 'Y'){
-					extraRoadAddr += (extraRoadAddr !== '' ? ', ' + data.buildingName : data.buildingName);
-				}
-				// 도로명, 지번 조합형 주소가 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
-				if(extraRoadAddr !== ''){
-					extraRoadAddr = ' (' + extraRoadAddr + ')';
-				}
-				// 도로명, 지번 주소의 유무에 따라 해당 조합형 주소를 추가한다.
-				if(fullRoadAddr !== ''){
-					fullRoadAddr += extraRoadAddr;
-				}
-
-				document.getElementById("addr1").value = data.zonecode; //5자리 새우편번호 사용
-				document.getElementById("addr2").value = fullRoadAddr;
-
-			}
-		}).open();
-	}
-</script>
 </body>
 </html>
