--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -54,14 +54,12 @@
     <div class="container">
         <!-- 회원정보수정 폼 시작 -->
         <h3 style="text-align: center">내 정보 수정</h3>
-        <form action="/mypage" th:action th:object="${updateUserInfoDto}" method="post">
+        <form th:object="${updateUserDto}" method="post">
             <!-- 아이디 -->
             <div class="form-group" style="width:300px;margin:0 auto;">
                 <label th:for="loginId">아이디</label>
-                <input type="text" th:field="*{loginId}" class="form-control" th:text="${user.loginId}"
-                       th:class="${#fields.hasErrors('loginId')}? 'form-control fieldError' : 'form-control'"
+                <input type="text" class="form-control" th:placeholder="${user.loginId}"
                        readonly="readonly">
-                <p th:if="${#fields.hasErrors('loginId')}" th:errors="*{loginId}">Incorrect date</p><br>
             </div>
 
             <!-- 비밀번호 -->
@@ -75,16 +73,14 @@
             <!-- 이름 -->
             <div class="form-group" style="width:300px;margin:0 auto;">
                 <label th:for="name">이름</label>
-                <input type="text" th:field="*{name}" class="form-control" th:text="${user.name}"
-                       th:class="${#fields.hasErrors('name')}? 'form-control fieldError' : 'form-control'"
+                <input type="text" class="form-control" th:placeholder="${user.name}"
                        readonly="readonly">
-                <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Incorrect date</p><br>
             </div>
 
             <!-- 연락처 -->
             <div class="form-group" style="width:300px;margin:0 auto;">
                 <label th:for="telephone">연락처</label>
-                <input type="text" th:field="*{telephone}" class="form-control" th:text="${user.telephone}"
+                <input type="text" th:field="*{telephone}" class="form-control" th:placeholder="${user.telephone}"
                        th:class="${#fields.hasErrors('telephone')}? 'form-control fieldError' : 'form-control'">
                 <p th:if="${#fields.hasErrors('telephone')}" th:errors="*{telephone}">Incorrect date</p><br>
             </div>
@@ -92,7 +88,7 @@
             <!-- 우편번호 -->
             <div class="form-group" style="width:300px;margin:0 auto;">
                 <label th:for="postalcode">우편번호</label>
-                <input type="text" th:field="*{postalcode}" class="form-control" th:text="${user.address.postalcode}"
+                <input type="text" th:field="*{postalcode}" class="form-control" th:placeholder="${user.address.postalcode}"
                        th:class="${#fields.hasErrors('postalcode')}? 'form-control fieldError' : 'form-control'"
                        name="addr1" id="addr1" readonly="readonly">
                 <p th:if="${#fields.hasErrors('postalcode')}" th:errors="*{postalcode}">Incorrect date</p>
@@ -102,7 +98,7 @@
             <!-- 도로명 주소 -->
             <div class="form-group" style="width:300px;margin:0 auto;">
                 <label th:for="road">도로명 주소</label>
-                <input type="text" th:field="*{road}" class="form-control" th:text="${user.address.road}"
+                <input type="text" th:field="*{road}" class="form-control" th:placeholder="${user.address.road}"
                        th:class="${#fields.hasErrors('road')}? 'form-control fieldError' : 'form-control'"
                        name="addr2" id="addr2" readonly="readonly">
                 <p th:if="${#fields.hasErrors('road')}" th:errors="*{road}">Incorrect date</p><br>
@@ -111,7 +107,7 @@
             <!-- 상세 주소 -->
             <div class="form-group" style="width:300px;margin:0 auto;">
                 <label th:for="detail">상세 주소</label>
-                <input type="text" th:field="*{detail}" class="form-control" th:text="${user.address.detail}"
+                <input type="text" th:field="*{detail}" class="form-control" th:placeholder="${user.address.detail}"
                        th:class="${#fields.hasErrors('detail')}? 'form-control fieldError' : 'form-control'">
                 <p th:if="${#fields.hasErrors('detail')}" th:errors="*{detail}">Incorrect date</p><br>
             </div>
@@ -159,41 +155,6 @@
 <!-- 주소록 api -->
 <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
 <script src="/resources/js/addressapi.js"></script>
-<script>
-    function execPostCode() {
-        new daum.Postcode({
-            oncomplete: function(data) {
-                // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
-
-                // 도로명 주소의 노출 규칙에 따라 주소를 조합한다.
-                // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
-                var fullRoadAddr = data.roadAddress; // 도로명 주소 변수
-                var extraRoadAddr = ''; // 도로명 조합형 주소 변수
-
-                // 법정동명이 있을 경우 추가한다. (법정리는 제외)
-                // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
-                if(data.bname !== '' && /[동|로|가]$/g.test(data.bname)){
-                    extraRoadAddr += data.bname;
-                }
-                // 건물명이 있고, 공동주택일 경우 추가한다.
-                if(data.buildingName !== '' && data.apartment === 'Y'){
-                    extraRoadAddr += (extraRoadAddr !== '' ? ', ' + data.buildingName : data.buildingName);
-                }
-                // 도로명, 지번 조합형 주소가 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
-                if(extraRoadAddr !== ''){
-                    extraRoadAddr = ' (' + extraRoadAddr + ')';
-                }
-                // 도로명, 지번 주소의 유무에 따라 해당 조합형 주소를 추가한다.
-                if(fullRoadAddr !== ''){
-                    fullRoadAddr += extraRoadAddr;
-                }
-
-                document.getElementById("addr1").value = data.zonecode; //5자리 새우편번호 사용
-                document.getElementById("addr2").value = fullRoadAddr;
-
-            }
-        }).open();
-    }
-</script>
+<script src="assets/js/user-address.js"></script>
 </body>
 </html>
