--- a/src/main/resources/templates/make-question.html
+++ b/src/main/resources/templates/make-question.html
@@ -82,7 +82,7 @@
                     <label for="content" class="qna_label">첨부 이미지</label><br><br>
                     <input type="file" id="img1_insert_btn" onchange="imgPreview(QnA_img_frame1, event.target.files[0])">
                     <br><br>
-                    <img id="QnA_img_frame1" src="assets/img/test_img.png" style="float:left;">
+                    <img id="QnA_img_frame1" src="/assets/img/test_img.png" style="float:left;">
                 </div>
 
             <!-- Q&A 등록 버튼 시작 -->
@@ -103,25 +103,25 @@
 <div th:replace="fragments/footer :: footer"/>
 
 <!-- jquery -->
-<script src="assets/js/jquery-1.11.3.min.js"></script>
+<script src="/assets/js/jquery-1.11.3.min.js"></script>
 <!-- bootstrap -->
-<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="/assets/bootstrap/js/bootstrap.min.js"></script>
 <!-- count down -->
-<script src="assets/js/jquery.countdown.js"></script>
+<script src="/assets/js/jquery.countdown.js"></script>
 <!-- isotope -->
-<script src="assets/js/jquery.isotope-3.0.6.min.js"></script>
+<script src="/assets/js/jquery.isotope-3.0.6.min.js"></script>
 <!-- waypoints -->
-<script src="assets/js/waypoints.js"></script>
+<script src="/assets/js/waypoints.js"></script>
 <!-- owl carousel -->
-<script src="assets/js/owl.carousel.min.js"></script>
+<script src="/assets/js/owl.carousel.min.js"></script>
 <!-- magnific popup -->
-<script src="assets/js/jquery.magnific-popup.min.js"></script>
+<script src="/assets/js/jquery.magnific-popup.min.js"></script>
 <!-- mean menu -->
-<script src="assets/js/jquery.meanmenu.min.js"></script>
+<script src="/assets/js/jquery.meanmenu.min.js"></script>
 <!-- sticker js -->
-<script src="assets/js/sticker.js"></script>
+<script src="/assets/js/sticker.js"></script>
 <!-- main js -->
-<script src="assets/js/main.js"></script>
+<script src="/assets/js/main.js"></script>
 <script>
     $(document).ready(function() {
         // 글자 수 세기 함수
