--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -52,7 +52,7 @@
 <div class="single-product mt-150 mb-150">
 	<div class="container">
 		<!-- 회원가입 폼 시작 -->
-		<form action="/join" th:action th:object="${joinDto}" method="post">
+		<form th:object="${joinDto}" method="post">
 			<!-- 아이디 -->
 			<div class="form-group" style="width:300px;margin:0 auto;">
 				<label th:for="loginId">아이디</label>
@@ -90,7 +90,7 @@
 				<label th:for="postalcode">우편번호</label>
 				<input type="text" th:field="*{postalcode}" class="form-control" placeholder="우편번호를 입력하세요"
 					   th:class="${#fields.hasErrors('postalcode')}? 'form-control fieldError' : 'form-control'"
-					   name="addr1" id="addr1" readonly="readonly">
+					   name="postalcode" id="postalcode" readonly="readonly">
 				<p th:if="${#fields.hasErrors('postalcode')}" th:errors="*{postalcode}">Incorrect date</p>
 				<button type="button" class="btn btn-default" onclick="execPostCode();"><i class="fa fa-search"></i> 우편번호 찾기</button><br><br>
 			</div>
@@ -100,7 +100,7 @@
 				<label th:for="road">도로명 주소</label>
 				<input type="text" th:field="*{road}" class="form-control" placeholder="도로명 주소를 입력하세요"
 					   th:class="${#fields.hasErrors('road')}? 'form-control fieldError' : 'form-control'"
-					   name="addr2" id="addr2" readonly="readonly">
+					   name="road" id="road" readonly="readonly">
 				<p th:if="${#fields.hasErrors('road')}" th:errors="*{road}">Incorrect date</p><br>
 			</div>
 
@@ -140,30 +140,30 @@
 <div th:replace="fragments/footer :: footer"/>
 
 <!-- jquery -->
-<script src="assets/js/jquery-1.11.3.min.js"></script>
+<script src="/assets/js/jquery-1.11.3.min.js"></script>
 <!-- bootstrap -->
-<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="/assets/bootstrap/js/bootstrap.min.js"></script>
 <!-- count down -->
-<script src="assets/js/jquery.countdown.js"></script>
+<script src="/assets/js/jquery.countdown.js"></script>
 <!-- isotope -->
-<script src="assets/js/jquery.isotope-3.0.6.min.js"></script>
+<script src="/assets/js/jquery.isotope-3.0.6.min.js"></script>
 <!-- waypoints -->
-<script src="assets/js/waypoints.js"></script>
+<script src="/assets/js/waypoints.js"></script>
 <!-- owl carousel -->
-<script src="assets/js/owl.carousel.min.js"></script>
+<script src="/assets/js/owl.carousel.min.js"></script>
 <!-- magnific popup -->
-<script src="assets/js/jquery.magnific-popup.min.js"></script>
+<script src="/assets/js/jquery.magnific-popup.min.js"></script>
 <!-- mean menu -->
-<script src="assets/js/jquery.meanmenu.min.js"></script>
+<script src="/assets/js/jquery.meanmenu.min.js"></script>
 <!-- sticker js -->
-<script src="assets/js/sticker.js"></script>
+<script src="/assets/js/sticker.js"></script>
 <!-- main js -->
-<script src="assets/js/main.js"></script>
+<script src="/assets/js/main.js"></script>
 
 <!-- 주소록 api -->
 <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
 <script src="/resources/js/addressapi.js"></script>
-<script src="assets/js/user-address.js"></script>
+<script src="/assets/js/user-address.js"></script>
 
 </body>
 </html>
