--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -40,7 +40,7 @@
 							<p class="subtitle">Catch Shop</p>
 							<h1>Login</h1>
 							<!-- 로그인 폼 시작 -->
-							<form action="/login" th:action th:object="${loginDto}" method="post">
+							<form th:object="${loginDto}" method="post">
 								<div th:if="${#fields.hasGlobalErrors()}">
 									<p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">전체 오류 메시지</p>
 								</div>
@@ -76,7 +76,7 @@
 							<!-- 로그인 폼 끝-->
 							
 							<!-- 회원가입, ID/PW 찾기 버튼 시작 -->
-							<a href="join" style="border-radius: 3px; width:300px;margin:0 auto;padding-bottom:10px;" class="bordered-btn">Join</a>
+							<a href="users" style="border-radius: 3px; width:300px;margin:0 auto;padding-bottom:10px;" class="bordered-btn">Join</a>
 							<div style="width:300px;margin:0 auto;">
 								<a href="find-id" style="border-radius: 3px;width:49%;float:left;margin-left:0px;" class="bordered-btn">Find ID</a>
 								<a href="find-pw" style="border-radius: 3px;width:49%;float:right;margin-left:0px;" class="bordered-btn">Find PW</a>
@@ -92,25 +92,25 @@
 	<div th:replace="fragments/footer :: footer"/>
 	
 	<!-- jquery -->
-	<script src="assets/js/jquery-1.11.3.min.js"></script>
+	<script src="/assets/js/jquery-1.11.3.min.js"></script>
 	<!-- bootstrap -->
-	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+	<script src="/assets/bootstrap/js/bootstrap.min.js"></script>
 	<!-- count down -->
-	<script src="assets/js/jquery.countdown.js"></script>
+	<script src="/assets/js/jquery.countdown.js"></script>
 	<!-- isotope -->
-	<script src="assets/js/jquery.isotope-3.0.6.min.js"></script>
+	<script src="/assets/js/jquery.isotope-3.0.6.min.js"></script>
 	<!-- waypoints -->
-	<script src="assets/js/waypoints.js"></script>
+	<script src="/assets/js/waypoints.js"></script>
 	<!-- owl carousel -->
-	<script src="assets/js/owl.carousel.min.js"></script>
+	<script src="/assets/js/owl.carousel.min.js"></script>
 	<!-- magnific popup -->
-	<script src="assets/js/jquery.magnific-popup.min.js"></script>
+	<script src="/assets/js/jquery.magnific-popup.min.js"></script>
 	<!-- mean menu -->
-	<script src="assets/js/jquery.meanmenu.min.js"></script>
+	<script src="/assets/js/jquery.meanmenu.min.js"></script>
 	<!-- sticker js -->
-	<script src="assets/js/sticker.js"></script>
+	<script src="/assets/js/sticker.js"></script>
 	<!-- main js -->
-	<script src="assets/js/main.js"></script>
+	<script src="/assets/js/main.js"></script>
 
 </body>
 </html>
