--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -40,6 +40,7 @@
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
+						<p>Catch Shop</p>
 						<h1>장바구니</h1>
 					</div>
 				</div>
@@ -74,13 +75,13 @@
 											<button style="border: none; background-color: transparent"><i class="far fa-window-close"></i></button>
 										</form>
 									</td>
-									<td class="product-image"><img src="assets/img/products/product-img-1.jpg" alt=""></td>
+									<td class="product-image"><img th:src="${cart.productImg}" alt=""></td>
 									<td class="product-name" th:text="${cart.name}"></td>
 									<td class="product-price" th:text="${cart.price} + '원'"></td>
 									<td class="product-quantity">
 										<form th:action="@{'/carts/' + ${cart.id}}"th:method="post">
 											<input type="hidden" name="_method" value="put">
-											<input type="number" th:name="count" th:value="${cart.cartCount}">
+											<input type="number" th:name="count" th:value="${cart.cartCount}" min="1">
 										</form>
 									</td>
 									<td class="product-total" th:text="${cart.totalProductPrice} + '원'"></td>
