관리자 상품 CRU 기능 추가

--- a/src/main/resources/templates/make-question.html
+++ b/src/main/resources/templates/make-question.html
@@ -84,7 +84,7 @@
                     <br><br>
                     <img id="QnA_img_frame1" src="/assets/img/test_img.png" style="float:left;">
                 </div>
-
+            </div>
             <!-- Q&A 등록 버튼 시작 -->
             <div class="hero-btns" style="margin-top:0px;">
                 <div style="width:300px;margin:0 auto;">
