--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -18,11 +18,11 @@
             <!-- 관리자 menu start -->
             <nav class="main-menu" th:if="${session.role == 'ADMIN'}">
               <ul>
-                <li><a href="products">Products</a></li>
-                <li><a href="products">Orders</a></li>
-                <li><a href="products">Sale</a></li>
-                <li><a href="products">Q&A</a></li>
-                <li><a href="products">Review</a></li>
+                <li><a href="#" th:href="@{/products/admin/{id} (id=${session.id})}">Products</a></li>
+                <li><a href="/">Orders</a></li>
+                <li><a href="users">Members</a></li>
+                <li><a href="/">Q&A</a></li>
+                <li><a href="/">Review</a></li>
                 <li>
                   <div class="header-icons">
                     <a class="shopping-cart" th:if="${session.loginUser == null}" href="login"><i class="far fa-heart"></i></a>
@@ -55,11 +55,11 @@
                 <li>
                   <div class="header-icons">
                     <a class="shopping-cart" th:if="${session.loginUser == null}" href="login"><i class="far fa-heart"></i></a>
-                    <a class="shopping-cart" th:if="${session.loginUser != null}" href="#" th:href="@{users/{id} (id=${session.id})}"><i class="far fa-heart"></i></a>
-                    <a class="shopping-cart" href="carts"><i class="fas fa-shopping-cart"></i></a>
+                    <a class="shopping-cart" th:unless="${session.loginUser == null}" href="#" th:href="@{/users/{id} (id=${session.id})}"><i class="far fa-heart"></i></a>
+                    <a class="shopping-cart" href="/carts"><i class="fas fa-shopping-cart"></i></a>
                     <a class="mobile-hide search-bar-icon" href="#"><i class="fas fa-search"></i></a>
                     <a th:if="${session.loginUser == null}" href="login">Login</a>
-                    <a th:if="${session.loginUser != null}" href="http://localhost:8080/logout">Logout</a>
+                    <a th:unless="${session.loginUser == null}" href="http://localhost:8080/logout">Logout</a>
                   </div>
                 </li>
               </ul>
